--- a/mscore/mscore/textproperties.ui
+++ b/mscore/mscore/textproperties.ui
@@ -79,6 +79,12 @@
              <property name="text">
               <string>Font:</string>
              </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
+             </property>
             </widget>
            </item>
            <item>
@@ -98,6 +104,12 @@
              </property>
              <property name="text">
               <string>Size:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -140,6 +152,12 @@
              </property>
              <property name="textFormat">
               <enum>Qt::PlainText</enum>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -256,6 +274,12 @@
             <widget class="QLabel" name="label_24">
              <property name="text">
               <string>Align:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -451,6 +475,12 @@
           <property name="text">
            <string>Color:</string>
           </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="indent">
+           <number>5</number>
+          </property>
          </widget>
         </item>
         <item>
@@ -535,6 +565,9 @@
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
+             <property name="indent">
+              <number>5</number>
+             </property>
             </widget>
            </item>
            <item row="0" column="1">
@@ -566,6 +599,12 @@
              </property>
              <property name="text">
               <string>relX:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -600,6 +639,12 @@
              <property name="text">
               <string extracomment="coordinate">Y:</string>
              </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
+             </property>
             </widget>
            </item>
            <item row="0" column="1">
@@ -631,6 +676,12 @@
              </property>
              <property name="text">
               <string>relY:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -755,6 +806,12 @@
              <property name="text">
               <string>Width:</string>
              </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
+             </property>
             </widget>
            </item>
            <item row="0" column="1">
@@ -780,6 +837,12 @@
              </property>
              <property name="text">
               <string>Margin:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
              </property>
             </widget>
            </item>
@@ -810,6 +873,12 @@
              <property name="text">
               <string>Round:</string>
              </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
+             </property>
             </widget>
            </item>
            <item row="1" column="1">
@@ -829,6 +898,12 @@
              </property>
              <property name="text">
               <string>Color:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+             <property name="indent">
+              <number>5</number>
              </property>
             </widget>
            </item>
